respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Supplier_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Suppliers_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_JOC_Sailings_List__c</fullName>
        <formula>TEXT( Vessel_Flight__r.Carrier_JOC_Sailings_List__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Carrier (JOC Sailings List)&quot; inside &quot;Vessel Flight&quot;</inlineHelpText>
        <label>Carrier (JOC Sailings List)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carton_Box_Suppliers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carton Box Suppliers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catalog_Account_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Account Price List</label>
        <referenceTo>Customer_Price_List__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catalog_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Conditions__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30% Deposit in Advanced and Balance with BL Copy</fullName>
                </value>
                <value>
                    <fullName>15% Deposit in Advanced and Balance Before Shipment</fullName>
                </value>
                <value>
                    <fullName>30% Deposit in Advanced and Balance Before Shipment</fullName>
                </value>
                <value>
                    <fullName>30% Deposit in Advanced and Balance with LC AT SIGN</fullName>
                </value>
                <value>
                    <fullName>100% LC AT SIGN</fullName>
                </value>
                <value>
                    <fullName>TT 100% Advanced Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Duration_months__c</fullName>
        <label>Contract Duration (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Conversion Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_ofDischarge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Discharge</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_ofLoad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Load</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders (Country of Load)</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Discharge__c</fullName>
        <formula>Route__r.Country_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Country of Discharge&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Route - Country of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Load__c</fullName>
        <formula>Route__r.Country_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Country of Load&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Route - Country of Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Suppliers_Quotes_Buyer_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryAddress__c</fullName>
        <label>Origin Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup / Delivery Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders (Delivery Account)</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup / Delivery Drayage</label>
        <referenceTo>Delivery_Zone__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fees_Kg__c</fullName>
        <description>If &quot;Total Weight (Kg)&quot; different from 0 then &quot;Total Fees Sell Amount&quot; / &quot;Total Weight (Kg)&quot;, else leave blank</description>
        <formula>IF(Total_Weight_Kg2__c&lt;&gt;0,Total_Fees_Sell_Amount__c / Total_Weight_Kg2__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Fees Sell Amount&quot; / &quot;Total Weight (Kg)&quot;</inlineHelpText>
        <label>Service Charges / Kg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fees_m3__c</fullName>
        <description>If &quot;Total Weight (Kg)&quot; different from 0 then &quot;Total Fees Sell Amount&quot; / &quot;Total Volume (m3)&quot;, else leave blank</description>
        <formula>IF(Total_Volume_m3_2__c&lt;&gt;0,Total_Fees_Sell_Amount__c /Total_Volume_m3_2__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Fees Sell Amount&quot; / &quot;Total Volume (m3)&quot;</inlineHelpText>
        <label>Service Charges / m3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote/Order</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incoterm_Place__c</fullName>
        <label>Incoterm Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Purchase Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labels_Suppliers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labels Suppliers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIN_Valid_Until__c</fullName>
        <label>Services Valid Until</label>
        <summarizedField>Supplier_Quote_Order_Fee_Line__c.Valid_Until__c</summarizedField>
        <summaryForeignKey>Supplier_Quote_Order_Fee_Line__c.Supplier_Quote_Order__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MOQ__c</fullName>
        <inlineHelpText>Minimum Order Quantity</inlineHelpText>
        <label>MOQ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Deliveries__c</fullName>
        <label>Max Deliveries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_Type__c</fullName>
        <label>Move Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Door to Door</fullName>
                </value>
                <value>
                    <fullName>Door to Port</fullName>
                </value>
                <value>
                    <fullName>Port to Door</fullName>
                </value>
                <value>
                    <fullName>Port to Port</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Active_Lines__c</fullName>
        <label>Number Active Lines</label>
        <summaryFilterItems>
            <field>Supplier_Quote_Line__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Quote_Line__c.Supplier_Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pallets_Suppliers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pallets Suppliers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Place_of_Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Port / Airport of Load</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Value does not exist or does not match criteria.</errorMessage>
            <filterItems>
                <field>$Source.Country_ofLoad__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.State_of_Load__c</field>
                <operation>equals</operation>
                <valueField>Location__c.State__c</valueField>
            </filterItems>
            <filterItems>
                <field>Location__c.State__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders (Port / Airport of Load)</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders_Place_of_Deliver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Place_of_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Port / Airport of Discharge</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>$Source.Country_ofDischarge__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.State_of_Discharge__c</field>
                <operation>equals</operation>
                <valueField>Location__c.State__c</valueField>
            </filterItems>
            <filterItems>
                <field>Location__c.State__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders (Port / Airport of Discharge)</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders_Place_of_Receipt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Poligag_Suppliers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Poligag Suppliers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Port_Airport_of_Discharge__c</fullName>
        <formula>Route__r.Port_Airport_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Port / Airport of Discharge&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Route - Port / Airport of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Airport_of_Load__c</fullName>
        <formula>Route__r.Port_Airport_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Port / Airport of Load&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Route - Port / Airport of Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Time_Days__c</fullName>
        <label>Production Time (Days)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Observations__c</fullName>
        <label>Quality Observations</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Receipt_Address__c</fullName>
        <label>Destination Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Route_State_of_Discharge__c</fullName>
        <formula>Route__r.State_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;State of Discharge&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Route - State of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_State_of_Load__c</fullName>
        <formula>Route__r.State_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;State of Load&quot; inside &quot;Route&quot;</inlineHelpText>
        <label>Route - State of Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Carrier_Line_Load_Point__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUM_Destination_Amount__c</fullName>
        <formula>Total_Fees_Sell_Amount__c + Total_Amount_Number__c + SUM_Total_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Fees Sell Amount&quot; + &quot;Total Amount&quot; + &quot;SUM Total Taxes&quot;</inlineHelpText>
        <label>SUM Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SUM_Total_Taxes_Number__c</fullName>
        <label>SUM Total Taxes Number</label>
        <summarizedField>Supplier_Quote_Line__c.Total_Taxes_header_currency__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Quote_Line__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Quote_Line__c.Supplier_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SUM_Total_Taxes__c</fullName>
        <formula>SUM_Total_Taxes_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of all Taxes from Supplier Quote/Order</inlineHelpText>
        <label>SUM Total Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Incoterm__c</fullName>
        <formula>TEXT(Supply_Project__r.Sales_Incoterm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Sales Incoterm&quot; inside &quot;Supply Project&quot;</inlineHelpText>
        <label>Sales Incoterm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Charges_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Charges Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Discharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State of Discharge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country_ofDischarge__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders_State_of_D</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_of_Load__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State of Load</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country_ofLoad__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders (State of Load)</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders_State_of_Load</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Observations__c</fullName>
        <label>Status Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <formula>Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Supplier&quot;</inlineHelpText>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Order_Ref_Number__c</fullName>
        <label>Supplier (Quote/Order Ref. Number)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Status__c</fullName>
        <label>Supplier Quote/Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Valid</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Sent Bid</fullName>
                </value>
                <value>
                    <fullName>Sent Final Bid</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Import-Export Consolidated</fullName>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Request_RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Request</label>
        <referenceTo>Supplier_Request_RFP__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Supplier_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier, Supply Chain Partner, Purchase Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders (Supplier)</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Supplier</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Supply_Project_Number__c</fullName>
        <formula>Supply_Project__r.Supply_Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Supply Project Number&quot; inside &quot;Supply Project&quot;</inlineHelpText>
        <label>Supply Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supply Project</label>
        <referenceTo>Supply_Project__c</referenceTo>
        <relationshipName>Suppliers_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxes_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxes Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Number__c</fullName>
        <label>Total Amount Number</label>
        <summarizedField>Supplier_Quote_Line__c.Total_Origin_Amount_header_currency__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Quote_Line__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Quote_Line__c.Supplier_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Total_Amount_Number__c</formula>
        <inlineHelpText>SUM of Original Amounts from Supplier Quote/Order</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Buy_Amount__c</fullName>
        <formula>Total_Fees_Buy_Amount_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of all Services&apos; Fees Buy Amounts</inlineHelpText>
        <label>Total Services Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Buy_Amount_number__c</fullName>
        <label>Total Services Buy Amount (number)</label>
        <summarizedField>Supplier_Quote_Order_Fee_Line__c.Buy_Amount_header_currency__c</summarizedField>
        <summaryForeignKey>Supplier_Quote_Order_Fee_Line__c.Supplier_Quote_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Sell_Amount__c</fullName>
        <formula>Total_Fees_Sell_Amount_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of all Services&apos; Fees Sell Amount</inlineHelpText>
        <label>Total Services Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Sell_Amount_number__c</fullName>
        <label>Total Services Sell Amount (number)</label>
        <summarizedField>Supplier_Quote_Order_Fee_Line__c.Sell_Amount_header_currency__c</summarizedField>
        <summaryForeignKey>Supplier_Quote_Order_Fee_Line__c.Supplier_Quote_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Std_Profit__c</fullName>
        <formula>Total_Fees_Sell_Amount__c - Total_Fees_Buy_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Services Sell Amount&quot; - &quot;Total Services Buy Amount&quot;</inlineHelpText>
        <label>Total Services Std. Profit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Volume_m3_2__c</fullName>
        <label>Total Volume (m3)</label>
        <summarizedField>Supplier_Quote_Line__c.Total_Volume_m3__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Quote_Line__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Quote_Line__c.Supplier_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Weight_Kg2__c</fullName>
        <label>Total Weight (Kg)</label>
        <summarizedField>Supplier_Quote_Line__c.Total_Weight_Kg__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Quote_Line__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Quote_Line__c.Supplier_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unsigned_Proforma_Invoice__c</fullName>
        <label>Unsigned Proforma Invoice</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Valid_Until_Supplier_Form__c</fullName>
        <label>Valid Until (Supplier Form)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Until__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_for_Auction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when this quote is included in the auction process</inlineHelpText>
        <label>Valid for Auction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vessel_Flight_Arrived__c</fullName>
        <formula>Vessel_Flight__r.Vessel_Flight_Arrived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Vessel/Flight Arrived&quot; inside &quot;Vessel/Flight&quot;</inlineHelpText>
        <label>Vessel Arrived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vessel_Flight_ETA_Point_of_Discharge__c</fullName>
        <formula>Vessel_Flight__r.Vessel_Flight_ETA_Point_of_Discharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Vessel ETA Point of Discharge&quot; inside &quot;Vessel&quot;</inlineHelpText>
        <label>Vessel ETA Point of Discharge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vessel_Flight_ETD_Point_of_Load__c</fullName>
        <formula>Vessel_Flight__r.Vessel_Flight_ETD_Point_of_Load__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Vessel ETA Point of Load&quot; inside &quot;Vessel&quot;</inlineHelpText>
        <label>Vessel ETD Point of Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vessel_Flight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vessel</label>
        <referenceTo>Vessel_Flight__c</referenceTo>
        <relationshipLabel>Suppliers Quotes/Orders</relationshipLabel>
        <relationshipName>Suppliers_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier Quote/Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Weight_Kg2__c</columns>
        <columns>Total_Volume_m3_2__c</columns>
        <columns>Customer__c</columns>
        <columns>Delivery_Account__c</columns>
        <columns>Delivery_Zone__c</columns>
        <columns>Route__c</columns>
        <columns>Total_Fees_Std_Profit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQO# {YYYY}-{000000}</displayFormat>
        <label>Supplier Quote/Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers Quotes/Orders</pluralLabel>
    <recordTypes>
        <fullName>Supplier_Hidden_Quote</fullName>
        <active>true</active>
        <label>Supplier Hidden Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Order</fullName>
        <active>true</active>
        <label>Supplier Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Quote</fullName>
        <active>true</active>
        <label>Supplier Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>